--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -10,7 +10,10 @@ jobs:
   build:
 
     runs-on: windows-latest
-
+    defaults:
+      run:
+        working-directory: ./
+    
     steps:
     - uses: actions/checkout@v2
     - name: Setup .NET
