--- a/src/MetroFramework5/MetroFramework5.csproj
+++ b/src/MetroFramework5/MetroFramework5.csproj
@@ -8,6 +8,7 @@
         <SignAssembly>true</SignAssembly>
         <PublicSign>false</PublicSign>
         <AssemblyOriginatorKeyFile>MetroFramework.snk</AssemblyOriginatorKeyFile>
+        <Platforms>AnyCPU;x64</Platforms>
     </PropertyGroup>
 
     <PropertyGroup Condition=" '$(Configuration)' == 'Debug' ">
