--- a/src/Shotr.Core.Quantizer/Shotr.Core.Quantizer.csproj
+++ b/src/Shotr.Core.Quantizer/Shotr.Core.Quantizer.csproj
@@ -3,6 +3,7 @@
     <PropertyGroup>
         <TargetFramework>net5.0-windows</TargetFramework>
         <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
+        <Platforms>AnyCPU;x64</Platforms>
     </PropertyGroup>
 
     <ItemGroup>
