--- a/src/ShotrUploaderPlugin/ShotrUploaderPlugin.csproj
+++ b/src/ShotrUploaderPlugin/ShotrUploaderPlugin.csproj
@@ -4,6 +4,7 @@
         <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
         <TargetFramework>net5.0-windows</TargetFramework>
         <UseWindowsForms>true</UseWindowsForms>
+        <Platforms>AnyCPU;x64</Platforms>
     </PropertyGroup>
 
 </Project>
