--- a/src/Shotr.Ui/Shotr.Ui.csproj
+++ b/src/Shotr.Ui/Shotr.Ui.csproj
@@ -4,7 +4,7 @@
     <TargetFramework>net5.0-windows</TargetFramework>
     <UseWindowsForms>true</UseWindowsForms>
     <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
-    <ApplicationIcon>shotr-icon.ico</ApplicationIcon>
+    <ApplicationIcon>Resources\shotr-icon.ico</ApplicationIcon>
     <AssemblyVersion>3.0.0.0</AssemblyVersion>
     <FileVersion>3.0.0.0</FileVersion>
     <NeutralLanguage>en-US</NeutralLanguage>
