Set up real world beta test

--- a/src/Shotr.Core/Shotr.Core.csproj
+++ b/src/Shotr.Core/Shotr.Core.csproj
@@ -5,7 +5,7 @@
     <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
     <Nullable>enable</Nullable>
     <Platforms>AnyCPU;x64</Platforms>
-    <Configurations>Debug;Release;ThemeDebugger</Configurations>
+    <Configurations>Debug;Release;ThemeDebugger;BetaTest</Configurations>
   </PropertyGroup>
 
   <ItemGroup>
