--- a/src/Shotr.Core/Shotr.Core.csproj
+++ b/src/Shotr.Core/Shotr.Core.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net5.0-windows</TargetFramework>
@@ -18,6 +18,7 @@
 
   <ItemGroup>
     <PackageReference Include="CustomEnvironmentConfig" Version="1.6.0" />
+    <PackageReference Include="NamedPipeServerStream.NetFrameworkVersion" Version="1.0.8" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
     <PackageReference Include="System.Drawing.Common" Version="5.0.0" />
   </ItemGroup>
