--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -70,6 +70,15 @@ jobs:
         uses: actions/download-artifact@v2
         with:
           name: Shotr
+          
+      - name: Display structure of downloaded files
+        run: ls -R
+        working-directory: ${{steps.download.outputs.download-path}}
+        
+      - name: Zip up release file
+        run: zip Shotr.zip Shotr.exe
+        working-directory: ${{steps.download.outputs.download-path}}
+        
       - name: Create Release Draft
         id: create_release
         uses: actions/create-release@v1
@@ -89,7 +98,18 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ${{steps.download.outputs.download-path}}/Shotr.zip
+          asset_path: Shotr.exe
+          asset_name: Shotr.exe
+          asset_content_type: application/octet-stream
+          
+      - name: Upload Release Asset
+        id: upload-release-asset-zip
+        uses: actions/upload-release-asset@v1.0.1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          upload_url: ${{ steps.create_release.outputs.upload_url }}
+          asset_path: Shotr.zip
           asset_name: Shotr.zip
           asset_content_type: application/zip
 #
