--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -28,18 +28,22 @@ jobs:
         dotnet-version: 5.0.100
     - name: Restore dependencies
       run: dotnet restore
+    - name: Set version number
+      run: | 
+        chmod +x "${GITHUB_WORKSPACE}/.github/version.sh"
+        "${GITHUB_WORKSPACE}/.github/version.sh"
     - name: Publish
-      run: dotnet publish -r win-x64 -c BetaTest
+      run: dotnet publish -r win-x64 -c "${{ env.BUILD_BRANCH }}" 
     - name: Test
       run: dotnet test --no-build --verbosity normal
     - uses: actions/upload-artifact@v2
       with:
         name: Shotr
-        path: ./src/Shotr.Ui/bin/BetaTest/net5.0-windows10.0.19041.0/win-x64/publish/Shotr.exe
+        path: ./src/Shotr.Ui/bin/${{env.BUILD_BRANCH}}/net5.0-windows10.0.19041.0/win-x64/publish/Shotr.exe
     - uses: actions/upload-artifact@v2
       with:
         name: Shotr-Installer
-        path: ./src/Shotr.Ui.Installer/bin/BetaTest/net5.0-windows/win-x64/publish/Shotr-Installer.exe
+        path: ./src/Shotr.Ui.Installer/bin/${{env.BUILD_BRANCH}}/net5.0-windows/win-x64/publish/Shotr-Installer.exe
 
   comment-on-pr:
     name: Leave a comment with a link to the build on the PR
@@ -66,6 +70,19 @@ jobs:
       - name: Set Release Version
         id: get_release_version
         run: echo ::set-output name=version::$(echo $GITHUB_REF | cut -d / -f 3 | sed s/^v// | sed 's/-a//' )
+        
+      - name: Get Issues and Format
+        id: get_issues_and_format
+        run: | 
+        
+        FEATURE_ISSUES=`GITHUB_TOKEN=${{ secrets.GITHUB_TOKEN }} gh issue list -m "${{ steps.get_release_version.outputs.version }}" -s "all" -l "feature" | awk -F $'\t' '{ printf "- %s (#%s)\n", $3, $1 }'`        
+        REFACTOR_ISSUES=`GITHUB_TOKEN=${{ secrets.GITHUB_TOKEN }} gh issue list -m "${{ steps.get_release_version.outputs.version }}" -s "all" -l "refactor" | awk -F $'\t' '{ printf "- %s (#%s)\n", $3, $1 }'`
+        BUG_ISSUES=`GITHUB_TOKEN=${{ secrets.GITHUB_TOKEN }} gh issue list -m "${{ steps.get_release_version.outputs.version }}" -s "all" -l "bug" | awk -F $'\t' '{ printf "- %s (#%s)\n", $3, $1 }'`
+        
+        ISSUES="${FEATURE_ISSUES}${REFACTOR_ISSUES}\n\n${BUG_ISSUES}"
+        echo 'ISSUES<<EOF' >> $GITHUB_ENV
+        echo "$ISSUES" >> $GITHUB_ENV
+        echo 'EOF' >> $GITHUB_ENV
 
       - name: Download Zip Artifact
         id: download
@@ -105,7 +122,7 @@ jobs:
           release_name: ${{ steps.get_release_version.outputs.version }}
           draft: true
           prerelease: ${{ contains(github.ref, '-a') }}
-          body: 'PLACEHOLDER'
+          body: ${{env.ISSUES}}
 
       - name: Upload Release Asset Exeutable
         id: upload-release-asset
