--- a/src/Shotr.Core.Quantizer/Shotr.Core.Quantizer.csproj
+++ b/src/Shotr.Core.Quantizer/Shotr.Core.Quantizer.csproj
@@ -4,7 +4,7 @@
         <TargetFramework>net5.0-windows</TargetFramework>
         <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
         <Platforms>AnyCPU;x64</Platforms>
-        <Configurations>Debug;Release;ThemeDebugger;BetaTest;WindowsNotification</Configurations>
+        <Configurations>Debug;Release;ThemeDebugger;BetaTest;WindowsNotification;Testing</Configurations>
     </PropertyGroup>
 
     <ItemGroup>
