--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -20,9 +20,6 @@ jobs:
   build:
     runs-on: windows-latest    
     steps:
-    - uses: Vampire/setup-wsl@v1
-      with:
-        distribution: Ubuntu-18.04
     - uses: actions/checkout@v2
     - name: Setup .NET
       uses: actions/setup-dotnet@v1
@@ -31,23 +28,19 @@ jobs:
     - name: Restore dependencies
       run: dotnet restore
     - name: Set version number
-      id: version_step
-      shell: wsl-bash {0}
-      run: | 
-        chmod +x "${GITHUB_WORKSPACE}/.github/version.sh"
-        "${GITHUB_WORKSPACE}/.github/version.sh"
+      run: "${GITHUB_WORKSPACE}/.github/version.ps1"
     - name: Publish
-      run: dotnet publish -r win-x64 -c "${{ env.BUILD_BRANCH }}" 
+      run: dotnet publish -r win-x64 -c "${{ env.CURRENT_BRANCH }}" 
     - name: Test
       run: dotnet test --no-build --verbosity normal
     - uses: actions/upload-artifact@v2
       with:
         name: Shotr
-        path: ./src/Shotr.Ui/bin/${{ env.BUILD_BRANCH }}/net5.0-windows10.0.19041.0/win-x64/publish/Shotr.exe
+        path: ./src/Shotr.Ui/bin/${{ env.CURRENT_BRANCH }}/net5.0-windows10.0.19041.0/win-x64/publish/Shotr.exe
     - uses: actions/upload-artifact@v2
       with:
         name: Shotr-Installer
-        path: ./src/Shotr.Ui.Installer/bin/${{ env.BUILD_BRANCH }}/net5.0-windows/win-x64/publish/Shotr-Installer.exe
+        path: ./src/Shotr.Ui.Installer/bin/${{ env.CURRENT_BRANCH }}/net5.0-windows/win-x64/publish/Shotr-Installer.exe
 
   comment-on-pr:
     name: Leave a comment with a link to the build on the PR
