Switch to powershell

--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -28,7 +28,8 @@ jobs:
     - name: Restore dependencies
       run: dotnet restore
     - name: Set version number
-      run: "${GITHUB_WORKSPACE}/.github/version.ps1"
+      shell: powershell
+      run: ${GITHUB_WORKSPACE}/.github/version.ps1
     - name: Publish
       run: dotnet publish -r win-x64 -c "${{ env.CURRENT_BRANCH }}" 
     - name: Test
