Inline version checker

--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -30,7 +30,17 @@ jobs:
     - name: Set version number
       shell: powershell
       run: |
-        & ($GITHUB_WORKSPACE + "\.github\version.ps1")
+        $VERSION = & git.exe tag --points-at main
+        if ($VERSION) {
+            $NVERSION = $VERSION.substring(1)
+            echo "[assembly: AssemblyVersion(`"$NVERSION`")]" | Out-File -Append -FilePath ${env:GITHUB_WORKSPACE}/src/Shotr.Ui/Properties/AssemblyVersion.cs -Encoding utf8
+            echo "[assembly: AssemblyFileVersion(`"$NVERSION`")]" | Out-File -Append -FilePath ${env:GITHUB_WORKSPACE}/src/Shotr.Ui/Properties/AssemblyVersion.cs -Encoding utf8
+            echo "Version is: $NVERSION"
+            echo "CURRENT_BRANCH=BetaTest" | Out-File -FilePath $Env:GITHUB_ENV -Encoding utf8 -Append
+        } else {
+            echo "Version is empty...skipping set."
+            echo "CURRENT_BRANCH=Testing" | Out-File -FilePath $Env:GITHUB_ENV -Encoding utf8 -Append
+        }
     - name: Publish
       run: dotnet publish -r win-x64 -c "${{ env.CURRENT_BRANCH }}" 
     - name: Test
