--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -84,7 +84,7 @@ jobs:
       - name: Get Issues and Format
         id: get_issues_and_format
         run: | 
-            cd ${{GITHUB_WORKSPACE}}
+            cd $GITHUB_WORKSPACE
             FEATURE_ISSUES=`GITHUB_TOKEN=${{ secrets.GITHUB_TOKEN }} gh issue list -m "${{ steps.get_release_version.outputs.version }}" -s "all" -l "feature" | awk -F $'\t' '{ printf "- %s (#%s)\n", $3, $1 }'`        
             REFACTOR_ISSUES=`GITHUB_TOKEN=${{ secrets.GITHUB_TOKEN }} gh issue list -m "${{ steps.get_release_version.outputs.version }}" -s "all" -l "refactor" | awk -F $'\t' '{ printf "- %s (#%s)\n", $3, $1 }'`
             BUG_ISSUES=`GITHUB_TOKEN=${{ secrets.GITHUB_TOKEN }} gh issue list -m "${{ steps.get_release_version.outputs.version }}" -s "all" -l "bug" | awk -F $'\t' '{ printf "- %s (#%s)\n", $3, $1 }'`
