Spit out to a file immediately

--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -85,13 +85,12 @@ jobs:
         id: get_issues_and_format
         run: | 
             cd $GITHUB_WORKSPACE
-            FEATURE_ISSUES=`GITHUB_TOKEN=${{ secrets.GITHUB_TOKEN }} gh issue list -m "${{ steps.get_release_version.outputs.version }}" -s "all" -l "feature" | awk -F $'\t' '{ printf "- %s (#%s)\n", $3, $1 }'`        
-            REFACTOR_ISSUES=`GITHUB_TOKEN=${{ secrets.GITHUB_TOKEN }} gh issue list -m "${{ steps.get_release_version.outputs.version }}" -s "all" -l "refactor" | awk -F $'\t' '{ printf "- %s (#%s)\n", $3, $1 }'`
-            BUG_ISSUES=`GITHUB_TOKEN=${{ secrets.GITHUB_TOKEN }} gh issue list -m "${{ steps.get_release_version.outputs.version }}" -s "all" -l "bug" | awk -F $'\t' '{ printf "- %s (#%s)\n", $3, $1 }'`
-            
-            ISSUES="${FEATURE_ISSUES}${REFACTOR_ISSUES}\n\n${BUG_ISSUES}"
             echo 'ISSUES<<EOF' >> $GITHUB_ENV
-            echo "$ISSUES" >> $GITHUB_ENV
+            echo "### Features: " >> $GITHUB_ENV
+            echo `GITHUB_TOKEN=${{ secrets.GITHUB_TOKEN }} gh issue list -m "${{ steps.get_release_version.outputs.version }}" -s "all" -l "feature request" | awk -F $'\t' '{ printf "- %s (#%s)\n", $3, $1 }'` >> $GITHUB_ENV
+            echo "" >> $GITHUB_ENV
+            echo "### Bug Fixes: " >> $GITHUB_ENV
+            echo `GITHUB_TOKEN=${{ secrets.GITHUB_TOKEN }} gh issue list -m "${{ steps.get_release_version.outputs.version }}" -s "all" -l "bug" | awk -F $'\t' '{ printf "- %s (#%s)\n", $3, $1 }'` >> $GITHUB_ENV
             echo 'EOF' >> $GITHUB_ENV
 
       - name: Download Zip Artifact
@@ -131,7 +130,7 @@ jobs:
           tag_name: ${{ github.ref }}
           release_name: ${{ steps.get_release_version.outputs.version }}
           draft: true
-          prerelease: ${{ contains(github.ref, '-a') }}
+          prerelease: false
           body: ${{env.ISSUES}}
 
       - name: Upload Release Asset Exeutable
