--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -33,8 +33,8 @@ jobs:
         $VERSION = & git.exe tag --points-at HEAD
         if ($VERSION) {
             $NVERSION = $VERSION.substring(1)
-            echo "[assembly: AssemblyVersion(`"$NVERSION`")]" | Out-File -Append -FilePath ${env:GITHUB_WORKSPACE}/src/Shotr.Ui/Properties/AssemblyVersion.cs -Encoding utf8
-            echo "[assembly: AssemblyFileVersion(`"$NVERSION`")]" | Out-File -Append -FilePath ${env:GITHUB_WORKSPACE}/src/Shotr.Ui/Properties/AssemblyVersion.cs -Encoding utf8
+            echo "[assembly: System.Reflection.AssemblyVersion(`"$NVERSION`")]" | Out-File -Append -FilePath ${env:GITHUB_WORKSPACE}/src/Shotr.Ui/Properties/AssemblyVersion.cs -Encoding utf8
+            echo "[assembly: System.Reflection.AssemblyFileVersion(`"$NVERSION`")]" | Out-File -Append -FilePath ${env:GITHUB_WORKSPACE}/src/Shotr.Ui/Properties/AssemblyVersion.cs -Encoding utf8
             echo "Version is: $NVERSION"
             echo "CURRENT_BRANCH=BetaTest" | Out-File -FilePath $Env:GITHUB_ENV -Encoding utf8 -Append
         } else {
